<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <EditText
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nome"
        android:layout_alignRight="@+id/nome"
        android:layout_below="@+id/nome"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/idade"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/idade"
        android:layout_alignStart="@+id/idade"
        android:layout_below="@+id/idade"
        android:layout_marginTop="19dp"
        android:text="@string/genero" />

    <RadioGroup
        android:id="@+id/radioGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/radioButton"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/radioButton"
            android:layout_toRightOf="@+id/radioButton"
            android:layout_weight="1"
            android:text="@string/feminino" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_weight="1"
            android:text="@string/masculino" />
    </RadioGroup>

    <EditText
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/peso"
        android:inputType="number" />

    <EditText
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/peso"
        android:layout_alignRight="@+id/peso"
        android:layout_below="@+id/peso"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/altura"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/enviar" />

</RelativeLayout>